# pyproject-template

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile  Dockerfile-builder  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  post-create.sh
src/: main.py
tests/: test_main.py
